--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,34 @@
 
 body{
   font-family: "Roboto", sans-serif;
+  background-color: #858484;
+}
+
+.container{
+  max-width:85%;
+  margin:auto
+}
+
+.flexSB{
+  display:flex;
+  justify-content:space-between;
+}
+
+
+.icon{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  text-align:center;
+  border-radius:50%;
+  background-color: rbga(255,255,255,0.3);
+  color:#1eb2a6;
+  transition:0.5s;
+}
+
+
+.icon:hover{
+  cursor:pointer;
+  background-color: #1eb2a6;
+  color:#fff;
 }
