--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 body{
   font-family: "Roboto", sans-serif;
-  background-color: #858484;
+  background-color: #f8f8f8;
 }
 
 .container{
@@ -40,4 +40,20 @@ body{
   cursor:pointer;
   background-color: #1eb2a6;
   color:#fff;
+}
+
+.row{
+  width:50%;
+}
+
+button{
+  padding:17px 30px;
+  background-color: #fff;
+  color:#1eb2a6;
+  font-weight: 600;
+  border:none;
+  margin:30px 10px 0 0;
+  border-radius:3px;
+  cursor:pointer;
+  box-shadow:0 24px 35px -11px rgba(0 0 0 /9%);
 }
