--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,75 @@ button{
   cursor:pointer;
   box-shadow:0 24px 35px -11px rgba(0 0 0 /9%);
 }
+
+
+button i {
+  margin-left:20px;
+
+}
+
+button:hover{
+  box-shadow:none;
+}
+
+
+.primary-btn{
+  background-color:#1eb2a6;
+  color:#fff;
+}
+
+
+
+#heading{
+  text-align:center;
+  padding:40px 0;
+}
+
+
+#heading h3{
+  font-weight:600;
+  letter-spacing:1px;
+  color:#1eb2a6;
+  text-transform: uppercase;
+}
+
+#heading h1{
+  font-size:45px;
+  margin:20px 0;
+  text-transform:capitalize;
+}
+
+p{
+  line-height:30px;
+  font-size:18px;
+}
+
+
+.back{
+  background-image:url('../public/images/back.webp');
+    background-size:cover;
+    background-attachment: fixed;
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:-1;
+    width:100%;
+    height:100vh;
+    padding-top:30%;
+    padding-right:50px;
+    color:#fff;
+    text-align:center;
+}
+
+
+.back h1{
+  font-size:100px;
+  font-weight:400;
+}
+
+
+.back h2{
+  font-weight:500;
+  font-size:17px;
+  text-transform:uppercase;
+}
