--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -14,3 +14,36 @@
     color:#fff;
 }
 
+
+.hero #heading h3{
+    color:#fff;
+}
+
+.hero #heading{
+    text-align:left;
+    margin:0;
+    padding:0;
+}
+
+
+
+@media screen and (max-width:768px){
+
+
+    .margin{
+        height:vh;
+    }
+
+    .hero{
+        background-position:right;
+        padding-top:50%;
+        height:80vh;
+        
+    }
+    
+    .hero .row{
+        width:100%;
+    }
+
+
+}
