--- a/src/App.css
+++ b/src/App.css
@@ -134,3 +134,16 @@ p{
 .margin{
   margin-top:40.3%;
 }
+
+
+.grid{
+  display:grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-gap:30px;
+}
+
+
+
+.flex{
+  display:flex;
+}
