--- a/src/App.css
+++ b/src/App.css
@@ -147,3 +147,23 @@ p{
 .flex{
   display:flex;
 }
+
+
+
+@media screen and (max-width:768px){
+
+
+  .grid{
+    grid-template-columns:repeat(2,1fr);
+  }
+
+  .back{
+    background-position:center;
+    padding-top:50%;
+    height:80vh;
+  }
+
+
+
+
+}
