keep moving forward

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,12 @@ p{
 }
 
 
+.grid2{
+  display:grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap:30px;
+}
+
 
 @media screen and (max-width:768px){
 
