--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,21 @@ p{
 }
 
 
+.outline-btn{
+  margin:0;
+  box-shadow:none;
+  border:2px solid #1eb2a6;
+  width:100%;
+  transition: 0.5s;
+}
+
+
+.outline-btn:hover{
+  background-color:#1eb2a6;
+  color:#fff;
+}
+
+
 @media screen and (max-width:768px){
 
 
