--- a/src/components/allcourses/courses.css
+++ b/src/components/allcourses/courses.css
@@ -52,6 +52,40 @@
     margin-right:5px;
 }
 
+
+.coursesCard .details .dimg img{
+    width:50px;
+    height:50px;
+    border-radius:50%;
+    margin-top:20px;
+}
+
+
+.coursesCard .details .box{
+    display:flex;
+    align-items:center;
+    color:grey;
+
+}
+
+.coursesCard .details span{
+    color:#1eb2a6;
+    font-weight:500;
+    font-size:14px;
+}
+
+
+.coursesCard .price{
+    margin:30px 0;
+    background: color #f8f8f8;
+    padding:10px;
+}
+
+
+.coursesCard h3{
+    font-size:500;
+    color:#1eb2a6;
+}
 /* .flex{
     text-align:left;
 } */
