--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,21 @@ p{
   grid-gap:30px;
 }
 
+.grid3{
+  display:grid;
+  grid-template-columns:repeat(6,1fr);
+  grid-gap:10px;
+}
+
+
+.padding{
+  padding:80px 0;
+}
+
+.shadow{
+  box-shadow:0 5px 25px -2px rgba(0 0 0 /6%);
+  background-color:#fff;
+}
 
 .outline-btn{
   margin:0;
@@ -174,7 +189,7 @@ p{
 @media screen and (max-width:768px){
 
 
-  .grid{
+  .grid, .grid2, .grid3{
     grid-template-columns:repeat(2,1fr);
   }
 
