--- a/src/components/allcourses/courses.css
+++ b/src/components/allcourses/courses.css
@@ -151,9 +151,17 @@
 
 
 
+.online .box:hover h1{
+    color:white;
+
+
+}
+
+
 .online .box:hover .show{
     opacity: 1;
     position:absolute;
     top:0;
     left:0;
 }
+
