--- a/src/components/heading/header.css
+++ b/src/components/heading/header.css
@@ -42,6 +42,13 @@ header ul li a {
 header ul li a:hover {
     color:#1eb2a6;
  
+
+}
+
+.grid2 {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 30px;
 }
 
 .start{
